--- a/index.html
+++ b/index.html
@@ -42,42 +42,42 @@
     </header>
     <main>
       <!------- Секція 1 із заголовком ------->
-      <section class="title-section">
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="banner-section">
+        <h1 class="title">Effective Solutions for Your Business</h1>
+        <button type="button" class="banner-button">Order Service</button>
       </section>
       <!------- Секція 2 із латентним заголовком 2р ------->
       <section class="features-section">
-        <h2>
+        <h2 class="section-title">
           Nikomu ne potribnyi zagolovok, iakyi nide ne napysanyi u zavdanni, ale
           ia mala zdogadatys shcho vin e
         </h2>
 
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="card-title">Strategy</h3>
+            <p class="text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="card-title">Punctuality</h3>
+            <p class="text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="card-title">Diligence</h3>
+            <p class="text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
-            </p>
+            </p class="text">
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="card-title">Technologies</h3>
+            <p class="text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -86,57 +86,57 @@
       </section>
       <!------ Секція 3 з мордочками ------->
       <section class="team-section">
-        <h2>Our Team</h2>
+        <h2 class="section-title">Our Team</h2>
 
         <ul>
-          <li>
+          <li class="card">
             <img
               src="./images/mark-guerrero.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="card-title">Mark Guerrero</h3>
+            <p class="text">Product Designer</p>
           </li>
 
-          <li>
+          <li class="card">
             <img
               src="./images/tom-ford.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="card-title">Tom Ford</h3>
+            <p class="text">Frontend Developer</p>
           </li>
 
-          <li>
+          <li class="card">
             <img
               src="./images/camila-garcia.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="card-title">Camila Garcia</h3>
+            <p class="text">Marketing</p>
           </li>
 
-          <li>
+          <li class="card">
             <img
               src="./images/daniel-wilson.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="card-title">Daniel Wilson</h3>
+            <p class="text">UI Designer</p>
           </li>
         </ul>
       </section>
       <!------ Секція 4 з портфоліо ------->
       <section class="portfolio-section">
-        <h2>Our Portfolio</h2>
+        <h2 class="section-title">Our Portfolio</h2>
 
         <ul>
           <li>
@@ -146,8 +146,8 @@
               width="360"
               height="300"
             />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="card-title">Banking App</h3>
+            <p class="text">App</p>
           </li>
 
           <li>
@@ -157,8 +157,8 @@
               width="360"
               height="300"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="card-title">Cashless Payment</h3>
+            <p class="text">Marketing</p>
           </li>
 
           <li>
@@ -168,8 +168,8 @@
               width="360"
               height="300"
             />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="card-title">Meditation App</h3>
+            <p class="text">App</p>
           </li>
 
           <li>
@@ -179,8 +179,8 @@
               width="360"
               height="300"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="card-title">Taxi Service</h3>
+            <p class="text">Marketing</p>
           </li>
 
           <li>
@@ -190,8 +190,8 @@
               width="360"
               height="300"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="card-title">Screen Illustrations</h3>
+            <p class="text">Design</p>
           </li>
 
           <li>
@@ -201,8 +201,8 @@
               width="360"
               height="300"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="card-title">Online Courses</h3>
+            <p class="text">Marketing</p>
           </li>
         </ul>
       </section>
