--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
       </address>
     </header>
     <main>
-      <!------- Секція 1 із заголовком ------->
+      <!-- Секція 1 із заголовком -->
       <section class="banner-section">
         <h1 class="title">Effective Solutions for Your Business</h1>
         <button type="button" class="banner-button">Order Service</button>
       </section>
-      <!------- Секція 2 із латентним заголовком 2р ------->
+      <!-- Секція 2 із латентним заголовком 2р -->
       <section class="features-section">
         <h2 class="section-title">
           Nikomu ne potribnyi zagolovok, iakyi nide ne napysanyi u zavdanni, ale
@@ -73,7 +73,7 @@
             <p class="text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
-            </p class="text">
+            </p>
           </li>
           <li>
             <h3 class="card-title">Technologies</h3>
@@ -84,7 +84,7 @@
           </li>
         </ul>
       </section>
-      <!------ Секція 3 з мордочками ------->
+      <!-- Секція 3 з мордочками -->
       <section class="team-section">
         <h2 class="section-title">Our Team</h2>
 
@@ -134,7 +134,7 @@
           </li>
         </ul>
       </section>
-      <!------ Секція 4 з портфоліо ------->
+      <!-- Секція 4 з портфоліо -->
       <section class="portfolio-section">
         <h2 class="section-title">Our Portfolio</h2>
 
