--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
   <body>
     <header class="header">
       <nav class="navigation">
-        <a class="logo" href="./index.html"><span>Web</span>Studio</a>
+        <a class="logo" href="./index.html"
+          >Web<span class="logo-accent">Studio</span></a
+        >
         <ul>
-          <li><a class="link" href="">Studio</a></li>
+          <li><a class="link" href="./index.html">Studio</a></li>
           <li><a class="link" href="">Portfolio</a></li>
           <li><a class="link" href="">Contacts</a></li>
         </ul>
@@ -209,7 +211,9 @@
     </main>
     <footer class="footer">
       <!-- ##### Логотип ##### -->
-      <a class="logo" href="./index.html"><span>Web</span>Studio</a>
+      <a class="logo" href="./index.html"
+        >Web<span class="logo-accent">Studio</span></a
+      >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
